<resources>
    <string name="app_name">Theka Desi Khana</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="share_msg">Share this code and get 300Rs as Promo Balance</string>
    <string name="str_promo_bal">Promo Balance:</string>
    <string name="str_wallet_bal">Wallet Balance:</string>
    <string name="str_total_amount">Total Amount:</string>
    <string name="str_promo_bal_amount">Promo Balance used:</string>
    <string name="str_wallet_bal_used">Wallet Balance used:</string>
    <string name="str_payable_amount">Payable Amount:</string>
    <string name="str_order_summary">Order Summary:</string>
    <string name="str_payment">Make Payment</string>
    <string name="str_confirm_order">Confirm Order</string>
    <string name="str_create_user">Create User</string>
    <string name="str_your_address">Your Address</string>
    <string name="str_your_ph_number">Mobile No</string>
    <string name="str_remove">Remove</string>
    <string name="str_add">Add</string>
    <string name="str_added_to_cart">Added to Cart</string>


    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="str_your_name">Your Name</string>
    <string name="str_your_email">Your Email</string>
    <string name="str_delivery_address">Delivery Address</string>
    <string name="str_reference_number">Reference Number</string>

    <string-array name="address_type">
        <item>Home</item>
        <item>Office</item>
    </string-array>

    <string name="string_address_type">Address Type</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="str_connect_with_google">Connect with Google</string>
    <string name="str_login">Login</string>
    <string name="str_date_of_birth">Date Of Birth</string>
    <string name="item_veg">Veg</string>
    <string name="item_non_veg">Non Veg</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_change">Change</string>
    <string name="str_select_address">Select Address</string>
    <string name="str_add_address">Add Address</string>
    <string name="str_pincode">Pincode</string>
    <string name="str_address_line2">Address Line 2</string>
    <string name="str_address_line1">Address Line 1</string>
    <string name="str_landmark">Landmark</string>
    <string name="str_submit">Submit</string>

</resources>
