<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_dark">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:layout_margin="8dp">

        <AutoCompleteTextView
            android:id="@+id/login_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_your_name"
            android:maxLines="1"
            android:textColor="@color/white" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/name_input_layout"
        android:id="@+id/phone_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/login_ph_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_your_ph_number"
            android:textColor="@color/white"
            android:inputType="number"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/phone_input_layout"
        android:id="@+id/address_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/login_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_delivery_address"
            android:textColor="@color/white"
            android:maxLines="2" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spinner_address_type"
        android:layout_below="@id/address_input_layout"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:entries="@array/address_type"
        android:prompt="@string/string_address_type"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/reference_edit_text"
        android:layout_below="@id/spinner_address_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/str_reference_number"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_login"
        android:textColor="@color/white"
        android:layout_margin="8dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/payment_btn_bg"/>

</RelativeLayout>