<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_bg">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/new_address_phone_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/new_address_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_your_ph_number"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:textColor="@color/white"
            android:inputType="number"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/new_address_phone_number_layout"
        android:id="@+id/address_line1_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/address_line1_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_address_line1"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:textColor="@color/white"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/address_line1_input_layout"
        android:id="@+id/address_line2_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/address_line2_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_address_line2"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:textColor="@color/white"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/address_line2_input_layout"
        android:id="@+id/new_address_pincode_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/address_pincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_pincode"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:textColor="@color/white"
            android:inputType="number"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@id/new_address_pincode_input_layout"
        android:id="@+id/new_address_landmark_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white">

        <EditText
            android:id="@+id/address_landmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/str_landmark"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:textColor="@color/white"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/address_type_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/new_address_landmark_layout"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/create_address_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/str_submit"/>

</RelativeLayout>